--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -11,14 +11,14 @@
 
   "MAP_TITLE": "Mapa",
 
-  "TUTORIAL_SLIDE1_TITLE": "Bienvenido/a al Ionic Super Starter",
-  "TUTORIAL_SLIDE1_DESCRIPTION": "El <b>Ionic Super Starter</b> es un starter de Ionic completo con muchas páginas preconstruidas y mejores prácticas.",
+  "TUTORIAL_SLIDE1_TITLE": "BUILD YOUR DREAM WEBSITE",
+  "TUTORIAL_SLIDE1_DESCRIPTION": "Beautiful designs and styles <br> Responsive for all devices <br> eCommerce and payment gateways <br> Outstanding support",
 
-  "TUTORIAL_SLIDE2_TITLE": "Cómo usar el Super Starter",
-  "TUTORIAL_SLIDE2_DESCRIPTION": "Monta los varios tipos de página que quieras y quita los que no. Hemos incluido muchas estructuras de página comunes en apps móviles, como páginas de inicio de sesión y registro, pestañas, y esta página de tutorial.",
+  "TUTORIAL_SLIDE2_TITLE": "WE DEAL WITH YOUR MARKETING, LOGOS AND ANALYSIS",
+  "TUTORIAL_SLIDE2_DESCRIPTION": "",
 
-  "TUTORIAL_SLIDE3_TITLE": "Empezando",
-  "TUTORIAL_SLIDE3_DESCRIPTION": "¿Necesitas ayuda? Échale un vistazo al README del Super Starter para ver el tutorial completo.",
+  "TUTORIAL_SLIDE3_TITLE": "PREMIUM MANAGED SERVERS",
+  "TUTORIAL_SLIDE3_DESCRIPTION": "We provide a lot of highly innovative proprietary software to boost your server performance and give you more functionality than anyone else",
 
   "SETTINGS_TITLE": "Ajustes",
   "SETTINGS_OPTION1": "Opción 1",
